--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,18 @@ edition = "2021"
 resolver = "2"
 
 [dependencies]
-jmap-client = { path = "/home/vagrant/code/jmap-client", features = ["websockets", "debug"] } #TODO: remove local path
+jmap-client = { path = "/home/vagrant/code/jmap-client", features = ["websockets"] } #TODO: remove local path
 mail-parser = { path = "/home/vagrant/code/mail-parser" } #TODO: remove local path
 chrono = { version = "0.4"}
 tracing-subscriber = "0.2"
+tracing = "0.1"
 rustls = "0.20"
 rustls-pemfile = "1.0"
 tokio = { version = "1.16.1", features = ["full"] }
+tokio-rustls = { version = "0.23.4"}
+futures = "0.3"
+signal-hook = "0.3.14"
+signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 
 [dev-dependencies]
 
