--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tokio-rustls = { version = "0.23.4"}
 futures = "0.3"
 signal-hook = "0.3.14"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
+base64 = "0.13"
 
 [dev-dependencies]
 
