--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rustls-pemfile = "1.0"
 tokio = { version = "1.16.1", features = ["full"] }
 tokio-rustls = { version = "0.23.4"}
 futures = "0.3"
+parking_lot = "0.12.0"
 signal-hook = "0.3.14"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 base64 = "0.13"
