--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rustls = "0.20"
 rustls-pemfile = "1.0"
 tokio = { version = "1.16.1", features = ["full"] }
 tokio-rustls = { version = "0.23.4"}
+sled = "0.34.7"
 futures = "0.3"
 parking_lot = "0.12.0"
 signal-hook = "0.3.14"
