--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ rustls = "0.20"
 rustls-pemfile = "1.0"
 tokio = { version = "1.16.1", features = ["full"] }
 tokio-rustls = { version = "0.23.4"}
+rayon = "1.5.1"
 sled = "0.34.7"
+num_cpus = "1.13.1"
 futures = "0.3"
 parking_lot = "0.12.0"
 signal-hook = "0.3.14"
