--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ rpath = false
 opt-level = 3
 debug = false
 codegen-units = 1
-lto = "thin"
+lto = true
 incremental = false
 panic = 'unwind'
 debug-assertions = false
@@ -67,7 +67,7 @@ rpath = false
 opt-level = 3
 debug = false
 codegen-units = 1
-lto = 'thin'
+lto = true
 incremental = false
 debug-assertions = false
 overflow-checks = false
