--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -173,6 +173,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build_docker:
+    needs:
+      - build
+      - cross_build
     name: Build Docker image for ${{ matrix.platform }}
     runs-on: ubuntu-latest
     if: '!cancelled()'
