--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ homepage = "https://stalw.art/imap"
 keywords = ["imap", "email", "mail", "server"]
 categories = ["email"]
 license = "AGPL-3.0-only"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 resolver = "2"
 
@@ -31,10 +31,16 @@ tracing = "0.1"
 jemallocator = "0.5.0"
 
 [features]
-default = ["sqlite"]
-#default = ["foundationdb"]
+#default = ["sqlite", "foundationdb", "postgres", "mysql", "rocks", "elastic", "s3", "redis"]
+default = ["sqlite", "postgres", "mysql", "rocks", "elastic", "s3", "redis"]
 sqlite = ["store/sqlite"]
 foundationdb = ["store/foundation"]
+postgres = ["store/postgres"]
+mysql = ["store/mysql"]
+rocks = ["store/rocks"]
+elastic = ["store/elastic"]
+s3 = ["store/s3"]
+redis = ["store/redis"]
 
 [workspace]
 members = [
@@ -47,7 +53,6 @@ members = [
     "main/crates/store",
     "main/crates/directory",
     "main/crates/utils",
-    "main/crates/maybe-async",
     "main/crates/install",
     "main/tests",
 ]
